# jscore

./: Cargo.toml  README.md  build.rs  wrapper.h
.github/workflows/: build.yml
examples/: hello_world.rs  import.rs  promise.rs
scripts/: download.py  extract.py
src/: class.rs  context.rs  lib.rs  object.rs  script.rs  string.rs  type.rs  value.rs
src/interfaces/: error.rs  mod.rs  symbol.rs
sys/: Cargo.toml  build.rs  wrapper.h
sys/scripts/: extract.py
sys/src/: bindings.rs  bun_stubs.rs  lib.rs
tests/: context_group.rs  evaluate_hello.rs
