[package]
name = "jscore"
description = "JavaScript core"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["remote-inspector"]
remote-inspector = ["jscore-sys/remote-inspector"]

[dependencies]
jscore-sys = { path = "./sys" }

[workspace]
members = [
    "./sys"
]
